Fixing small bugs

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
               <h5 class="text-primary-gradient fw-medium">About MusicMate</h5>
               <h1 class="mb-4">
-                The only helping musicians expand their network and find work
+                A platform dedicated to help musicians expand their network and find work
                 opportunities
               </h1>
               <p class="mb-4">
@@ -304,6 +304,7 @@
                   <a
                     href="https://www.figma.com/proto/cu4qOejV38zChL8QPV6MCk/Consolidation?node-id=130-3584&scaling=scale-down&page-id=130%3A3583&starting-point-node-id=130%3A3584&show-proto-sidebar=1"
                     class="d-flex bg-primary-gradient rounded py-3 px-4"
+                    target="_blank"
                   >
                     <i class="fa fa-palette fa-3x text-white flex-shrink-0"></i>
                     <div class="ms-3">
@@ -316,6 +317,7 @@
                   <a
                     href="https://github.com/rishabhmthakur2/musicmate"
                     class="d-flex bg-primary-gradient rounded py-3 px-4"
+                    target="_blank"
                   >
                     <i class="fab fa-github fa-3x text-white flex-shrink-0"></i>
                     <div class="ms-3">
@@ -328,6 +330,7 @@
                   <a
                     href="https://www.ischool.berkeley.edu/projects/2023/musicmate"
                     class="d-flex bg-primary-gradient rounded py-3 px-4"
+                    target="_blank"
                   >
                     <i
                       class="fa fa-laptop-code fa-3x text-white flex-shrink-0"
@@ -340,8 +343,9 @@
                 </div>
                 <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
                   <a
-                    href=""
+                    href="https://drive.google.com/file/d/1InZg_LsJ_CAX1CXcnMERpXSBkArAl9G4/view?usp=sharing"
                     class="d-flex bg-secondary-gradient rounded py-3 px-4"
+                    target="_blank"
                   >
                     <i class="fa fa-file fa-3x text-white flex-shrink-0"></i>
                     <div class="ms-3">
@@ -368,7 +372,7 @@
             class="owl-carousel testimonial-carousel wow fadeInUp"
             data-wow-delay="0.1s"
           >
-            <a href="https://www.linkedin.com/in/ailiya-duan/"><div class="testimonial-item rounded p-4">
+            <a href="https://www.linkedin.com/in/ailiya-duan/" target="_blank"><div class="testimonial-item rounded p-4">
               <div class="d-flex align-items-center mb-4">
                 <img
                   class="img-fluid bg-white rounded flex-shrink-0 p-1"
@@ -381,11 +385,11 @@
                 </div>
               </div>
               <p class="mb-0" style="color: #919294">
-                Ailiya is our product designer who is also a project manager in disguise. She is also the only one in the team who can sing and spends her days watching hamster videos.
+                Ailiya is our product designer who is also a project manager in disguise. She is also the only one in the team who can sing.
               </p>
             </div>
             </a>
-            <a href="https://www.linkedin.com/in/advait-lad/"><div class="testimonial-item rounded p-4">
+            <a href="https://www.linkedin.com/in/advait-lad/" target="_blank"><div class="testimonial-item rounded p-4">
               <div class="d-flex align-items-center mb-4">
                 <img
                   class="img-fluid bg-white rounded flex-shrink-0 p-1"
@@ -402,7 +406,7 @@
               </p>
             </div>
             </a>
-            <a href="https://www.linkedin.com/in/akdhondi/"><div class="testimonial-item rounded p-4">
+            <a href="https://www.linkedin.com/in/akdhondi/" target="_blank"><div class="testimonial-item rounded p-4">
               <div class="d-flex align-items-center mb-4">
                 <img
                   class="img-fluid bg-white rounded flex-shrink-0 p-1"
@@ -419,7 +423,7 @@
               </p>
             </div>
             </a>
-            <a href="https://www.linkedin.com/in/avashadhikari/"><div class="testimonial-item rounded p-4">
+            <a href="https://www.linkedin.com/in/avashadhikari/" target="_blank"><div class="testimonial-item rounded p-4">
               <div class="d-flex align-items-center mb-4">
                 <img
                   class="img-fluid bg-white rounded flex-shrink-0 p-1"
@@ -432,11 +436,11 @@
                 </div>
               </div>
               <p class="mb-0" style="color: #919294">
-                Avash is a backend engineer with over four years of experience, He is also our in-house database expert.
+                Avash is a backend engineer with over four years of experience. He is also our in-house database expert.
               </p>
             </div>
             </a>
-            <a href="https://www.linkedin.com/in/rishabhmthakur/"><div class="testimonial-item rounded p-4">
+            <a href="https://www.linkedin.com/in/rishabhmthakur/" target="_blank"><div class="testimonial-item rounded p-4">
               <div class="d-flex align-items-center mb-4">
                 <img
                   class="img-fluid bg-white rounded flex-shrink-0 p-1"
@@ -453,7 +457,7 @@
               </p>
             </div>
             </a>
-            <a href="https://www.linkedin.com/in/kayashaolu/"><div class="testimonial-item rounded p-4">
+            <a href="https://www.linkedin.com/in/kayashaolu/" target="_blank"><div class="testimonial-item rounded p-4">
               <div class="d-flex align-items-center mb-4">
                 <img
                   class="img-fluid bg-white rounded flex-shrink-0 p-1"
