Fixed remaining bugs

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
 
-  <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="51">
+  <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="51" >
     <div class="container-xxl bg-white p-0">
       <!-- Spinner Start -->
       <div
@@ -125,7 +125,7 @@
             <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
               <h5 class="text-primary-gradient fw-medium">About MusicMate</h5>
               <h1 class="mb-4">
-                A platform dedicated to help musicians expand their network and find work
+                A platform dedicated to help musicians expand their network and find gig
                 opportunities
               </h1>
               <p class="mb-4">
@@ -164,7 +164,7 @@
             <h1 class="mb-5">We have four core modules</h1>
           </div>
           <div class="row g-4">
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
               <div class="feature-item bg-light rounded p-4">
                 <div
                   class="d-inline-flex align-items-center justify-content-center bg-primary-gradient rounded-circle mb-4"
@@ -179,7 +179,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
               <div class="feature-item bg-light rounded p-4">
                 <div
                   class="d-inline-flex align-items-center justify-content-center bg-secondary-gradient rounded-circle mb-4"
@@ -195,7 +195,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
               <div class="feature-item bg-light rounded p-4">
                 <div
                   class="d-inline-flex align-items-center justify-content-center bg-primary-gradient rounded-circle mb-4"
@@ -210,7 +210,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
               <div class="feature-item bg-light rounded p-4">
                 <div
                   class="d-inline-flex align-items-center justify-content-center bg-secondary-gradient rounded-circle mb-4"
@@ -274,14 +274,16 @@
       <div class="container-xxl py-5" id="links">
         <div class="container py-5 px-lg-5">
           <div class="row g-5 align-items-center">
-            <div class="col-lg-6">
+            <div class="col-lg-6 container-iframe">
               <iframe
-                class="img-fluid wow fadeInUp"
+              style="aspect-ratio: 16 / 9;
+	height: 100%;
+	width: 100%;"
                 data-wow-delay="0.1s"
-                width="1280"
-                height="720"
+                width="30em"
+                height="22.5em"
                 src="https://www.youtube.com/embed/oNh_0AnBkJU"
-                title="MusicMate Product Video"
+                title="MusicMate"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
@@ -350,7 +352,7 @@
                     <i class="fa fa-file fa-3x text-white flex-shrink-0"></i>
                     <div class="ms-3">
                       <p class="text-white mb-0">Project Report</p>
-                      <h5 class="text-white mb-0">Drive</h5>
+                      <h5 class="text-white mb-0">Google Drive</h5>
                     </div>
                   </a>
                 </div>
@@ -393,7 +395,7 @@
               <div class="d-flex align-items-center mb-4">
                 <img
                   class="img-fluid bg-white rounded flex-shrink-0 p-1"
-                  src="img/advait.jpg"
+                  src="img/advait.jpeg"
                   style="width: 85px; height: 85px"
                 />
                 <div class="ms-4">
